2001-08-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-load-list): Retry to read a file when failed.

2001-08-26  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* README.shimbun.ja: Add information on nikkansports.

	* shimbun/sb-nikkansports.el: New file.

2001-08-25  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* shimbun/sb-isize-sports.el (shimbun-isize-sports-group-alist):
	Improved content-start/end of football.

2001-08-24  MIYOSHI Masanori  <miyoshi@boreas.dti.ne.jp>

	* README.shimbun.ja: Add information on makanai, f1fan,
	f1express and isize-sports.

	* shimbun/sb-makanai.el: Specify iso-2022-7bit loading for the
	flie.
	(shimbun-makanai-groups): Convert a group name to lower case.
	(shimbun-makanai-group-alist): Ditto.
	(shimbun-makanai-coding-system): Abolished.

	* shimbun/sb-isize-sports.el (shimbun-isize-sports-group-alist):
	Convert group names to lower case.

	* shimbun/sb-f1fan.el: Specify iso-2022-7bit loading for the flie.

	* shimbun/sb-f1express.el, shimbun/sb-f1fan.el,
	shimbun/sb-isize-sports.el, shimbun/sb-makanai.el: New files.

2001-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-xemacs.el (shimbun-xemacs-x-face-alist): Added.

2001-08-21  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mew.el: Rewrite for renewal of mew.org ml archive.

2001-08-13  NAKAGAWA Takayuki  <tknakaga@kanagawa.hitachi.co.jp>

	* w3m.el (w3m-w3m-attributes): Refer `w3m-base-url' as current
	url, when it is available.

2001-08-10  Takenobu Sugiyama  <sugiyama@ae.advantest.co.jp>

	* w3m-weather.el (w3m-weather-url-alist): Update data to follow
	the most recent urls.
	(w3m-weather-default-area): Ditto.
	(w3m-weather-remove-weather-images): Ditto.

2001-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-download): Made it to work as a command.

2001-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-fontify-images): Use `w3m-decode-anchor-string' to
	convert "&amp;" to "&" in the url string.
